--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,9 @@ version '1.0'
 sourceCompatibility = 1.8
 
 apply plugin: 'application'
+apply plugin: 'java'
 
-mainClassName = 'design.dhachidori.StreamSample'
+mainClassName = 'design.hachidori.StreamSample'
 
 repositories {
     mavenCentral()
